<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_light">


    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="75dp"
        android:background="@color/purple_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:translationY="80dp">

                <!-- Game Metadata -->
                <EditText
                    android:id="@+id/addGameTitle"
                    android:hint="@string/addgamehint_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:textColor="#000000"
                    android:layout_marginBottom="15dp"/>

                <EditText
                    android:id="@+id/addGameConsole"
                    android:hint="@string/addGameConsole"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:textColor="#000000"
                    android:layout_marginBottom="15dp"/>

                <EditText
                    android:id="@+id/addGameGenre"
                    android:hint="@string/addGameGenre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:textColor="#000000"
                    android:layout_marginBottom="15dp"/>

                <EditText
                    android:id="@+id/addReleaseYear"
                    android:hint="@string/addReleaseYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:textColor="#000000"
                    android:layout_marginBottom="15dp"/>

                <EditText
                    android:id="@+id/addPublisher"
                    android:hint="@string/addPublisher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:textColor="#000000"
                    android:layout_marginBottom="15dp"/>



                <EditText
                    android:id="@+id/addCompletionYear"
                    android:hint="@string/addCompletionyear"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:textColor="#000000"
                    android:layout_marginBottom="15dp"/>

                <EditText
                    android:id="@+id/addReview"
                    android:hint="@string/addReview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:textColor="#000000"
                    android:layout_marginBottom="15dp"/>

                <EditText
                    android:id="@+id/addRating"
                    android:hint="@string/addRating"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:textColor="#000000"
                    android:layout_marginBottom="15dp"/>

                <EditText
                    android:id="@+id/addGameCoverUrl"
                    android:hint="@string/addGameCoverUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:textColor="#000000"
                    android:layout_marginBottom="15dp"/>


                <CheckBox
                    android:id="@+id/boolFavorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favoriteBox"
                    android:background="@android:color/transparent"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"/>

                <CheckBox
                    android:id="@+id/boolCompletionStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/completedBox"
                    android:background="@android:color/transparent"                    android:textColor="@color/white"
                    android:layout_margin="10dp"/>




                <Button
                    android:id="@+id/btnSubmitGame"
                    android:text="@string/addGame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:backgroundTint="@color/purple_light"
                    />


            </LinearLayout>
        </ScrollView>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="@color/purple_light">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/AddGameTag"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:backgroundTint="@color/white"/>
        </FrameLayout>

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>