<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_light">


    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="75dp"
        android:background="@color/purple_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/recentPlaytimeString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/totalRecentPlaytime"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/recentPlaytimeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/profileRecentPlaytime"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/lifetimePlaytimeString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/lifetimePlaytime"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/lifetimePlaytimeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/profileLifetimePlaytime"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/favoriteConsoleString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/favoriteConsole"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/favoriteConsoleValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/profileFavoriteConsole"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/completionRateString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/completionRate"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/completionRateValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/profileCompletionRate"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/purple_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/profileStats"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"/>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>