<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_dark">


    <FrameLayout
        android:id="@+id/TopBar"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:background="@color/purple_light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="start|center"
            android:src="@drawable/backarrowicon"
            app:tint="@color/white"
            android:scaleType="fitCenter"
            android:padding="8dp"
            android:background="@null"
            android:contentDescription="@string/back_button"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/LibraryTag"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"/>
    </FrameLayout>


    <FrameLayout
        android:id="@+id/CompletedHeader"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/purple_semiDark"
        app:layout_constraintTop_toBottomOf="@id/TopBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/CompletedGamesTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/CompletedGamesTag"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </FrameLayout>

    <!-- Content scrolls; starts at top -->
    <ScrollView
        android:id="@+id/completedScroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/CompletedHeader"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <GridLayout
            android:id="@+id/completedGameGridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:orientation="horizontal"
            android:padding="8dp"
            android:useDefaultMargins="true"/>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
